解决redeploy时产生的 OutOfMemoryError